# bible-verses

./: .gitignore  pyproject.toml
app/: .env  main.py  settings.py
app/routes/: when.py
app/server/: app.py  database.py
app/server/models/: bible.py  when.py
tests/: test_bible_verses.py
